# Visual-Novel-Rust

./: .gitignore  Cargo.toml  README.md
assets/DialogueFlow/: test.ink  test.ink.json
examples/: ink_vm_test.rs
src/: game.rs  lib.rs  main.rs  menu.rs
src/dialogue_system/: mod.rs
src/ink_vm/: mod.rs  runtime.rs  types.rs
src/utils/: mod.rs
